# terrain-renderer

./: README.md
code/: CMakeLists.txt
code/terrain-renderer/: CMakeLists.txt  terrainrenderapplication.cc  terrainrenderapplication.h  terrainrendererapplication.cc  terrainrendererapplication.h  terrainrendererproject.cc  terrainrenderproject.cc
code/terrain-renderer/gamestates/: terrainrenderergamestate.cc  terrainrenderergamestate.h  terrainrendergamestate.cc  terrainrendergamestate.h
code/terrain-renderer/terrainentity/: block.h  terrainentity.cc  terrainentity.h  terrainnode.cc  terrainnode.h  terrainnodeinstance.cc  terrainnodeinstance.h
data/tables/: globals.xml
work/assets/geoclipmap_surfaces/: geoclipmap.sur  geoclipmap_sur.thumb  wireframe.sur
work/assets/geoclipmap_textures/: geoclipmap_texture.xml
work/assets/geoclipmaps_materials/: geoclipmap_base.xml
work/levels/: terrainlevel.xml
work/materials/: geoclipmap_template.xml
work/shaders/gl/: geoclipmaps.fx
